Fixed issues with image stretching

--- a/css/style.css
+++ b/css/style.css
@@ -443,9 +443,45 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/massive.jpg');
 }
 
-.sub-article img {
+.sub-article-img-wrapper {
+  display: block;
+  flex: 0 0 96px;
+  background-size: cover;
+  background-position: 50%;
   width: 96px;
   height: 96px;
+}
+
+.sub-a-img1 {
+  background-image: url('../images/latest.png');
+}
+
+.sub-a-img2 {
+  background-image: url('../images/sonos.png');
+}
+
+.sub-a-img3 {
+  background-image: url('../images/google-tensor.png');
+}
+
+.sub-a-img4 {
+  background-image: url('../images/GodfallTeaser04-796x448.png');
+}
+
+.sub-a-img5 {
+  background-image: url('../images/mobile-voting.png');
+}
+
+.sub-a-img6 {
+  background-image: url('../images/Doctor-796x417.png');
+}
+
+.sub-a-img7 {
+  background-image: url('../images/neural.png');
+}
+
+.sub-a-img8 {
+  background-image: url('../images/Microsoft-Edge-Surf-796x417.jpg');
 }
 
 .sub-article div {
@@ -894,5 +930,6 @@
   .lt-dktp-img {
     min-height: 175px;
     max-height: 200px;
+    padding-top: 74.5%;
   }
 }
